# lfact

./: LICENSE  README.md  pyproject.toml
.github/workflows/: practice_gha.yml
lfact/: __init__.py  fact.py
